// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ErrorCard matches snapshot 1`] = `
<ErrorBox>
  <ErrorGraphic />
  <ErrorMessage>
    Error
  </ErrorMessage>
  <ErrorDetail />
</ErrorBox>
`;

exports[`ErrorCard renders an error message 1`] = `
<ErrorBox>
  <ErrorGraphic />
  <ErrorMessage>
    Woopsie
  </ErrorMessage>
  <ErrorDetail />
</ErrorBox>
`;
